# datasette-apps

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test-playwright.yml  test.yml
datasette_apps/: __init__.py  acl.py  agent_tools.py  capabilities.py  csp.py  data_access.py  db.py  hookspecs.py  ids.py  permissions.py  prompt.py  registry.py  rendering.py  utils.py  views.py
datasette_apps/static/: datasette-apps.css
datasette_apps/templates/: _app_crumbs.html  _app_frame.html  _csp_origins_field.html  _llm_prompt.html  _stored_query_picker.html  app_create.html  app_delete.html  app_edit.html  app_full.html  app_list.html  app_revision.html  app_view.html
plans/: homepage-app-cards-mockup.html  initial.md
tests/: test_acl_optional.py  test_acl_sharing.py  test_agent_tools.py  test_apps.py  test_capabilities.py  test_catalog_pagination.py  test_csp.py  test_data_access.py  test_edit_controls.py  test_jump.py  test_llm_prompt.py  test_menu_links.py  test_permissions.py  test_pins_homepage.py  test_playwright.py  test_registry.py  test_routes.py  test_srcdoc_injection.py  test_templates.py
