[project]
name = "datasette-apps"
version = "0.1a3"
description = "Create apps that live inside Datasette"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a31",
    "datasette-agent-edit>=0.1a0",
    "datasette-acl>=0.5a1",
    # PyPI rejects direct-URL dependencies; switch to a version specifier
    # once datasette-acl-share is published to PyPI.
    "datasette-acl-share @ https://github.com/datasette/datasette-acl-share/releases/download/0.0.1a2/datasette_acl_share-0.0.1a2-py3-none-any.whl",
]

[dependency-groups]
dev = [
    "playwright>=1.60.0",
    "pytest",
    "pytest-asyncio",
]

[tool.uv.sources]
# Temporary: standard_roles() is not in a datasette-acl release yet (0.5a1
# predates it). When removing this, also bump the datasette-acl version
# constraint above to the first release that ships standard_roles().
datasette-acl = { path = "../datasette-acl", editable = true }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/datasette/datasette-apps"
Changelog = "https://github.com/datasette/datasette-apps/releases"
Issues = "https://github.com/datasette/datasette-apps/issues"
CI = "https://github.com/datasette/datasette-apps/actions"

[project.entry-points.datasette]
apps = "datasette_apps"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.package-data]
datasette_apps = ["static/*", "templates/*"]

[tool.setuptools.packages.find]
include = ["datasette_apps"]
