[project]
name = "datasette-apps"
version = "0.1a3"
description = "Create apps that live inside Datasette"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a31",
    "datasette-agent-edit>=0.1a0",
]

[dependency-groups]
dev = [
    "playwright>=1.60.0",
    "pytest",
    "pytest-asyncio",
    # Pull acl into the default dev/CI environment so its test suite runs.
    {include-group = "acl"},
]
# Optional per-app sharing: datasette-acl + the share dialog UI. Kept out of
# [project.dependencies] so the plugin falls back to the is_private access
# model when they are absent. A dependency-group rather than a
# [project.optional-dependencies] extra because datasette-acl-share is a
# direct-URL wheel, which PyPI rejects in published extras; revisit once it
# lands on PyPI. datasette-acl-share pulls in the datasette-acl release that
# ships standard_roles(), so no separate datasette-acl pin is needed.
acl = [
    "datasette-acl-share @ https://github.com/datasette/datasette-acl-share/releases/download/0.0.1a3/datasette_acl_share-0.0.1a3-py3-none-any.whl",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/datasette/datasette-apps"
Changelog = "https://github.com/datasette/datasette-apps/releases"
Issues = "https://github.com/datasette/datasette-apps/issues"
CI = "https://github.com/datasette/datasette-apps/actions"

[project.entry-points.datasette]
apps = "datasette_apps"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.package-data]
datasette_apps = ["static/*", "templates/*"]

[tool.setuptools.packages.find]
include = ["datasette_apps"]
