[project]
name = "datasette-apps"
version = "0.1a3"
description = "Create apps that live inside Datasette"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a31",
    "datasette-agent-edit>=0.1a0",
]

[project.optional-dependencies]
# Optional per-app sharing UI. Kept out of [project.dependencies] so the plugin
# falls back to the is_private access model when absent. datasette-acl-share
# pulls in datasette-acl, so no separate pin is needed.
acl = [
    "datasette-acl-share>=0.0.1a4",
]

[dependency-groups]
dev = [
    "playwright>=1.60.0",
    "pytest",
    "pytest-asyncio",
    # Pull acl into the default dev/CI environment so its test suite runs.
    "datasette-apps[acl]",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/datasette/datasette-apps"
Changelog = "https://github.com/datasette/datasette-apps/releases"
Issues = "https://github.com/datasette/datasette-apps/issues"
CI = "https://github.com/datasette/datasette-apps/actions"

[project.entry-points.datasette]
apps = "datasette_apps"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.package-data]
datasette_apps = ["static/*", "templates/*"]

[tool.setuptools.packages.find]
include = ["datasette_apps"]
